# python-sdk

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  TESTING.md  package.json  pyproject.toml  release.config.mjs
.github/workflows/: ci.yml  release.yml
changes/: +story-1-2-config-route-api-v1-prefix.bugfix.md  +story-1-4-is-in-regex-matches-operators.bugfix.md  +story-2-3-tracking-metrics-host-and-user-agent.bugfix.md  +story-5-1-release-workflow.internal.md  +story-5-2-auto-config-refresh.feature.md  +story-5-3-async-framework-roadmap.internal.md  +story-qs12-staging-demo-harness.feature.md  +story-qs13-serving-config-drift-gate.internal.md  18.internal.md  19.feature.md  20.internal.md  21.feature.md  22.internal.md  23.internal.md  README.md
ci/: lower-bounds-overrides.txt
demo/: .env.example  README.md  __init__.py  config_fixture.json  run_demo.py
docs/: async.md  debugging.md  evaluation.md  extending.md  index.md  initialization.md  migration-from-javascript.md  migration-from-rest.md  queue-control.md  release-process.md  roadmap.md  runtime-integration.md  support-workflows.md  tracking.md
docs/adr/: 0001-config-refresh-concurrency-and-backoff.md
docs/site/: README.md  python-code-examples.md  python-configuration.md  python-initialization.md  python-installation.md  python-quickstart.md  python-return-types.md  python-segments-manager.md  releases-python-sdk.md
examples/: _sample_config.py  basic_experience.py  basic_feature.py  direct_config.py
scripts/: check_generated_pyi_header.py  extract_release_notes.py  generate_bucketing_vectors.js  generate_parity_fixtures.py  verify_release.py
scripts/js_reference/: bucketing.js  emit_bucketing.js  emit_features.js  emit_rules.js  emit_state.js  package.json  rule_engine.js
src/convert_sdk/: __init__.py  config.py  context.py  core.py  diagnostics.py  errors.py  events.py  logging.py  version.py
src/convert_sdk/_generated/: __init__.pyi  serving_config.pyi
src/convert_sdk/_internal/: __init__.py  redaction.py
src/convert_sdk/adapters/: __init__.py
src/convert_sdk/adapters/events/: __init__.py  in_memory_event_bus.py  in_process.py
src/convert_sdk/adapters/storage/: __init__.py  in_memory.py
src/convert_sdk/adapters/transport/: __init__.py  httpx_transport.py
src/convert_sdk/config_loader/: __init__.py  loader.py  normalizer.py  refresh.py  validators.py
src/convert_sdk/domain/: __init__.py  config_snapshot.py  context_state.py  results.py
src/convert_sdk/evaluation/: __init__.py  bucketing.py  entity_lookup.py  experiences.py  features.py  rules.py  segments.py
src/convert_sdk/ports/: __init__.py  event_bus.py  storage.py  transport.py
src/convert_sdk/tracking/: __init__.py  conversions.py  deduplication.py  flush.py  payloads.py  queue.py  tracker.py
src/convertcom_python_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/convertcom_sdk/: __init__.py  config.py  context.py  core.py  enums.py  errors.py  sdk.py  types.py
src/convertcom_sdk/api/: __init__.py  api_manager.py
src/convertcom_sdk/bucketing/: __init__.py  bucketing_manager.py
src/convertcom_sdk/data/: __init__.py  data_manager.py  data_store_manager.py
src/convertcom_sdk/events/: __init__.py  event_manager.py
src/convertcom_sdk/experience/: __init__.py  experience_manager.py
src/convertcom_sdk/features/: __init__.py  feature_manager.py
src/convertcom_sdk/logger/: __init__.py  log_manager.py
src/convertcom_sdk/rules/: __init__.py  rule_manager.py
src/convertcom_sdk/segments/: __init__.py  segments_manager.py
src/convertcom_sdk/utils/: __init__.py  comparisons.py  data_store.py  file_logger.py  hashing.py  http_client.py  object_utils.py  string_utils.py  type_utils.py
tests/: docs_sample_config.py  parity_utils.py  test_bucketing.py  test_bucketing_events.py  test_config_and_errors.py  test_config_refresh.py  test_config_snapshot.py  test_context_creation.py  test_context_state.py  test_conversion_domain.py  test_conversion_revenue.py  test_conversion_tracking.py  test_core_initialization.py  test_create_context_contract.py  test_cross_sdk_debugging.py  test_deduplication.py  test_demo_harness.py  test_diagnosable_outcomes.py  test_diagnostic_logging.py  test_diagnostics.py  test_docs_samples.py  test_entity_lookup.py  test_evaluation_internals.py  test_events.py  test_examples.py  test_experience_evaluation.py  test_experience_selection.py  test_feature_evaluation.py  test_flush_lifecycle.py  test_httpx_transport.py  test_in_memory_store.py  test_integration_customization.py  test_layering.py  test_lifecycle_events.py  test_logging.py  test_packaging.py  test_public_api.py  test_redaction.py  test_rules.py  test_segments.py  (+6 more)
tests/fixtures/config/: full_config.json  minimal_config.json
tests/integration/: conftest.py  test_in_memory_store.py  test_queue_lifecycle.py  test_tracking_delivery.py
tests/parity/: README.md  conftest.py  test_js_bucketing_event_parity.py  test_js_bucketing_parity.py  test_js_feature_parity.py  test_js_rule_parity.py  test_js_state_parity.py
tests/parity/fixtures/: bucketing_event_vectors.json  bucketing_vectors.json  feature_vectors.json  rule_vectors.json  state_vectors.json
tests/unit/: conftest.py  test_api_manager.py  test_bucketing_manager.py  test_comparisons.py  test_context_public_api.py  test_core.py  test_data_manager.py  test_data_store_helper.py  test_data_store_manager.py  test_event_manager.py  test_experience_manager.py  test_feature_manager.py  test_file_logger.py  test_http_client.py  test_log_manager.py  test_rule_manager.py  test_segments_manager.py  test_string_utils.py
typecheck/: serving_config_contract.py
